--- a/index.html
+++ b/index.html
@@ -164,39 +164,39 @@
                 <noscript> <!-- FALLBACK -->
                     <a id="dark-fallback" href="dark-index.html" aria-label="Alternar Modo oscuro">🌙</a>
                 </noscript>
-                <button id="theme-dark-btn" class="scale-icons js-disabled" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
+                <button id="theme-dark-btn" class="icons-scale js-disabled" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
                 <!--//END DARK MODE -->
                 <!-- LANG DROPDOWN MENU -->
                 <noscript id="lang-fallback"> <!-- FALLBACK -->
                     <button data-lang="ca" aria-label="Català">
-                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
                     <button data-lang="es" aria-label="Español">
-                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
                     <button data-lang="en" aria-label="English">
-                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
                 </noscript>
                 <div id="lang-menu" class="js-disabled"> <!-- JS ENABLED -->
                     <button id="lang-toggle" data-lang="ca" aria-label="Català">
-                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
                     <button data-lang="es" aria-label="Español">
-                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
                     <button data-lang="en" aria-label="English">
-                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
@@ -333,12 +333,12 @@
                             </div>
                             <aside class="carousel-control" aria-label="Controles del carrusel">
                                 <button class="carousel-back" aria-label="Retroceder">
-                                    <svg class="scale-icons" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                    <svg class="icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                         <use href="img/sprite.svg#arrow-left"></use>
                                     </svg>
                                 </button>
                                 <button class="carousel-advance" aria-label="Avanzar">
-                                    <svg class="scale-icons" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                    <svg class="icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                         <use href="img/sprite.svg#arrow-right"></use>
                                     </svg>
                                 </button>
@@ -387,7 +387,7 @@
                     <div class="others">
                         <h4>Otros datos</h4>
                         <a class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descargar CV pdf">
-                            <svg class="accent-2-svg scale-icons" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                            <svg class="accent-2-svg icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#pdf"></use>
                             </svg>
                         </a>
@@ -409,14 +409,14 @@
                                 <ol aria-label="Menú de repositorios">
                                     <li>
                                         <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                            <svg class="accent-2-svg scale-icons" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="accent-2-svg icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                            <svg class="accent-2-svg scale-icons" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="accent-2-svg icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
@@ -426,7 +426,7 @@
                         </noscript>
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
                             <button id="burger-btn" aria-label="Menú de repositorios" aria-expanded="false">
-                                <span id="burger-icon" class="scale-icons">
+                                <span id="burger-icon" class="icons-scale">
                                     <span id="burger-icon-top"></span>
                                     <span id="burger-icon-middle"></span>
                                     <span id="burger-icon-bottom"></span>
@@ -436,14 +436,14 @@
                                 <ol id="burger-links">
                                     <li>
                                         <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                            <svg class="accent-2-svg scale-icons" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="accent-2-svg icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                            <svg class="accent-2-svg scale-icons" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="accent-2-svg icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
@@ -472,7 +472,7 @@
         <footer id="cookies-bar" style="display: block;">
             <p>
                 🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad, <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas).
-                <button id="accept-cookies" class="scale-icons" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies"> ¿Qué es una cookie? </a>
+                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies"> ¿Qué es una cookie? </a>
             </p>
         </footer>
         <!--//COOKIES END -->
@@ -485,7 +485,7 @@
             </div>
             <div id="modal-img-wrapper"></div>
             <button id="modal-close" aria-label="Cerrar">
-                <svg class="scale-icons" aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
+                <svg class="icons-scale" aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
                     <use href="img/sprite.svg#close"></use>
                 </svg>
             </button>
