--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                 <iframe id="modal-iframe" src="#" aria-label="Certificado oficial"></iframe>
             </div>
             <div id="modal-img-wrapper"></div>
-            <button id="modal-close" aria-label="Cerrar">
+            <button id="modal-close" class="accent-1-svg" aria-label="Cerrar">
                 <svg class="icons-scale" aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
                     <use href="img/sprite.svg#close"></use>
                 </svg>
