--- a/index.html
+++ b/index.html
@@ -224,17 +224,17 @@
                     <h3>Idiomas</h3>
                     <ul id="languages">
                         <li>Catalán
-                            <svg class="accent-1-svg" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
                         <li>Español
-                            <svg class="accent-1-svg" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
                         <li>Inglés
-                            <svg class="accent-1-svg" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" role="img" aria-label="Nivel nativo" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#medium-lang"></use>
                             </svg>
                         </li>
@@ -247,7 +247,7 @@
                             <address>
                                 <a href="mailto:dev@sandokan.cat" aria-label="Enviar E-mail:"><strong>dev@sandokan.cat</strong></a>
                             </address>
-                            <svg class="accent-1-svg" aria-hidden="true" width="25" height="25" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" aria-hidden="true" width="25" height="25" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#email"></use>
                             </svg>
                         </li>
@@ -255,7 +255,7 @@
                             <address>
                                 <a href="tel:+34631306583" aria-label="Enviar WhatsApp o llamar:">+34 631306583</a>
                             </address>
-                            <svg class="accent-1-svg" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#whatsapp"></use>
                             </svg>
                         </li>
@@ -263,13 +263,13 @@
                             <address>
                                 <a href="https://linkedin.com/in/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Visitar perfil de Linkedin:">https://linkedin.com/in/sandokanCat</a>
                             </address>
-                            <svg class="accent-1-svg" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#linkedin"></use>
                             </svg>
                         </li>
                         <li>
                             <address>08014 Barcelona</address>
-                            <svg class="accent-1-svg" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#address"></use>
                             </svg>
                         </li>
@@ -387,7 +387,7 @@
                     <div class="others">
                         <h4>Otros datos</h4>
                         <a class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descargar CV pdf">
-                            <svg class="accent-2-svg icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-color-2 icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#pdf"></use>
                             </svg>
                         </a>
@@ -409,14 +409,14 @@
                                 <ol aria-label="Menú de repositorios">
                                     <li>
                                         <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                            <svg class="accent-2-svg icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                            <svg class="accent-2-svg icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
@@ -436,14 +436,14 @@
                                 <ol id="burger-links">
                                     <li>
                                         <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                            <svg class="accent-2-svg icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                            <svg class="accent-2-svg icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
@@ -484,7 +484,7 @@
                 <iframe id="modal-iframe" src="#" aria-label="Certificado oficial"></iframe>
             </div>
             <div id="modal-img-wrapper"></div>
-            <button id="modal-close" class="accent-1-svg" aria-label="Cerrar">
+            <button id="modal-close" class="icons-color-1" aria-label="Cerrar">
                 <svg class="icons-scale" aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
                     <use href="img/sprite.svg#close"></use>
                 </svg>
