--- a/index.html
+++ b/index.html
@@ -168,18 +168,18 @@
                 <!--//END DARK MODE -->
                 <!-- LANG DROPDOWN MENU -->
                 <noscript id="lang-fallback"> <!-- FALLBACK -->
-                    <button data-lang="ca" aria-label="Català">
-                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                    <button class="icons-scale" data-lang="ca" aria-label="Català">
+                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
-                    <button data-lang="es" aria-label="Español">
-                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                    <button class="icons-scale" data-lang="es" aria-label="Español">
+                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
-                    <button data-lang="en" aria-label="English">
-                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                    <button class="icons-scale" data-lang="en" aria-label="English">
+                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
