--- a/index.html
+++ b/index.html
@@ -162,24 +162,24 @@
             <nav>
                 <!-- DARK MODE BUTTON -->
                 <noscript> <!-- FALLBACK -->
-                    <a id="dark-fallback" href="dark-index.html" aria-label="Alternar Modo oscuro">🌙</a>
+                    <a id="dark-fallback" class="icons-scale" href="dark-index.html" aria-label="Alternar Modo oscuro">🌙</a>
                 </noscript>
                 <button id="theme-dark-btn" class="icons-scale js-disabled" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
                 <!--//END DARK MODE -->
                 <!-- LANG DROPDOWN MENU -->
                 <noscript id="lang-fallback"> <!-- FALLBACK -->
                     <button class="icons-scale" data-lang="ca" aria-label="Català">
-                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
                     <button class="icons-scale" data-lang="es" aria-label="Español">
-                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
                     <button class="icons-scale" data-lang="en" aria-label="English">
-                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
