--- a/index.html
+++ b/index.html
@@ -168,24 +168,7 @@
                 <!--//END DARK MODE -->
                 <!-- LANG DROPDOWN MENU -->
                 <noscript id="lang-fallback"> <!-- FALLBACK -->
-                    <button class="icons-scale" data-lang="ca" aria-label="Català">
-                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                            <use href="img/sprite.svg#cat-flag"></use>
-                        </svg>
-                    </button>
-                    <button class="icons-scale" data-lang="es" aria-label="Español">
-                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                            <use href="img/sprite.svg#es-flag"></use>
-                        </svg>
-                    </button>
-                    <button class="icons-scale" data-lang="en" aria-label="English">
-                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                            <use href="img/sprite.svg#uk-flag"></use>
-                        </svg>
-                    </button>
-                </noscript>
-                <div id="lang-menu" class="js-disabled"> <!-- JS ENABLED -->
-                    <button id="lang-toggle" data-lang="ca" aria-label="Català">
+                    <button data-lang="ca" aria-label="Català">
                         <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
@@ -196,6 +179,23 @@
                         </svg>
                     </button>
                     <button data-lang="en" aria-label="English">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <use href="img/sprite.svg#uk-flag"></use>
+                        </svg>
+                    </button>
+                </noscript>
+                <div id="lang-menu" class="js-disabled"> <!-- JS ENABLED -->
+                    <button class="icons-scale" id="lang-toggle" data-lang="ca" aria-label="Català">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <use href="img/sprite.svg#cat-flag"></use>
+                        </svg>
+                    </button>
+                    <button class="icons-scale" data-lang="es" aria-label="Español">
+                        <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <use href="img/sprite.svg#es-flag"></use>
+                        </svg>
+                    </button>
+                    <button class="icons-scale" data-lang="en" aria-label="English">
                         <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
