--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                                     <span id="burger-icon-bottom"></span>
                                 </span>
                             </button>
-                            <div id="burger-links-container">
+                            <div id="burger-links-container" class="icons-scale">
                                 <ol id="burger-links">
                                     <li>
                                         <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
