try a new approach

--- a/index.html
+++ b/index.html
@@ -432,24 +432,22 @@
                                     <span id="burger-icon-bottom"></span>
                                 </span>
                             </button>
-                            <div id="burger-links-container">
-                                <ol id="burger-links">
-                                    <li>
-                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
-                                                <use href="img/sprite.svg#github"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                            <svg class="icons-color-2 icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
-                                                <use href="img/sprite.svg#vercel"></use>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                </ol>
-                            </div>
+                            <ol id="burger-links">
+                                <li id="github">
+                                    <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
+                                        <svg class="icons-color-2 icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                            <use href="img/sprite.svg#github"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li id="vercel">
+                                    <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
+                                        <svg class="icons-color-2 icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                            <use href="img/sprite.svg#vercel"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ol>
                         </aside>
                         <!--//MENU END -->
                     </div>
