--- a/index.html
+++ b/index.html
@@ -433,14 +433,14 @@
                                 </span>
                             </button>
                             <ol id="burger-links">
-                                <li id="github">
+                                <li id="github-icon">
                                     <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
                                         <svg class="icons-color-2 icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                             <use href="img/sprite.svg#github"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li id="vercel">
+                                <li id="vercel-icon">
                                     <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
                                         <svg class="icons-color-2 icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                             <use href="img/sprite.svg#vercel"></use>
