f*ck... i will never finish

--- a/index.html
+++ b/index.html
@@ -425,29 +425,31 @@
                             </aside>
                         </noscript>
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
-                            <button id="burger-btn" aria-label="Menú de repositorios" aria-expanded="false">
-                                <span id="burger-icon" class="icons-scale">
-                                    <span id="burger-icon-top"></span>
-                                    <span id="burger-icon-middle"></span>
-                                    <span id="burger-icon-bottom"></span>
-                                </span>
-                            </button>
-                            <ol id="burger-links">
+                            <ul id="burger-links">
+                                <li>
+                                    <button id="burger-btn" aria-label="Menú de repositorios" aria-expanded="false">
+                                        <span id="burger-icon" class="icons-scale">
+                                            <span id="burger-icon-top"></span>
+                                            <span id="burger-icon-middle"></span>
+                                            <span id="burger-icon-bottom"></span>
+                                        </span>
+                                    </button>
+                                </li>
                                 <li id="github-icon">
-                                    <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                        <svg class="icons-color-2 icons-scale" role="img" aria-label="Github" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                    <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Github">
+                                        <svg class="icons-color-2 icons-scale" role="img" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                             <use href="img/sprite.svg#github"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li id="vercel-icon">
-                                    <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                        <svg class="icons-color-2 icons-scale" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                    <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Vercel">
+                                        <svg class="icons-color-2 icons-scale" role="img" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                             <use href="img/sprite.svg#vercel"></use>
                                         </svg>
                                     </a>
                                 </li>
-                            </ol>
+                            </ul>
                         </aside>
                         <!--//MENU END -->
                     </div>
