--- a/index.html
+++ b/index.html
@@ -393,10 +393,10 @@
                         </a>
                     </div>
                     <div id="other-data">
-                        <ul>
+                        <ol>
                             <li>Permiso de conducir B y vehículo propio</li>
                             <li>Disponibilidad total dentro de la provincia de Barcelona</li>
-                        </ul>
+                        </ol>
                         <p id="random-phrases" aria-live="polite"></p>
                     </div>
                 </section>
@@ -406,7 +406,7 @@
                         <!-- DROPDOWN MENU -->
                         <noscript> <!-- FALLBACK -->
                             <aside id="menu-fallback">
-                                <ol aria-label="Menú de repositorios">
+                                <ul aria-label="Menú de repositorios">
                                     <li>
                                         <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
                                             <svg class="icons-color-2 icons-scale" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
@@ -421,7 +421,7 @@
                                             </svg>
                                         </a>
                                     </li>
-                                </ol>
+                                </ul>
                             </aside>
                         </noscript>
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
