just trying like a stupid :'(

--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
                         </noscript>
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
                             <ul id="burger-links">
-                                <li>
-                                    <button id="burger-btn" aria-label="Menú de repositorios" aria-expanded="false">
+                                <li id="burger-btn">
+                                    <button aria-label="Menú de repositorios" aria-expanded="false">
                                         <span id="burger-icon" class="icons-scale">
                                             <span id="burger-icon-top"></span>
                                             <span id="burger-icon-middle"></span>
