--- a/index.html
+++ b/index.html
@@ -160,64 +160,66 @@
             </noscript>
             <!--//NOSCRIPT END -->
             <nav>
-                <ul>
-                    <li>
-                        <!-- DARK MODE BUTTON -->
-                        <noscript> <!-- FALLBACK -->
-                            <a id="dark-fallback" class="icons-scale" href="dark-index.html" aria-label="Alternar Modo oscuro">🌙</a>
-                        </noscript>
+                <!-- FALLBACK NAV -->
+                <noscript>
+                    <ul>
+                        <li> <!-- DARK MODE -->
+                            <a class="icons-scale" aria-label="Alternar Modo oscuro" href="fallbacks/index.es-dark.html">🌙</a>
+                        </li>
+                        <!-- LANG MENU -->
+                        <li>
+                            <a data-lang="ca" aria-label="Català" href="fallbacks/index.ca.html">
+                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                                    <use href="img/sprite.svg#cat-flag"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a data-lang="es" aria-label="Español" href="fallbacks/index.es.html">
+                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                                    <use href="img/sprite.svg#es-flag"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a data-lang="en" aria-label="English" href="index.html">
+                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                                    <use href="img/sprite.svg#uk-flag"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </noscript>
+                <!--// FALLBACK NAV END -->
+                <!-- JS NAV -->
+                <ul id="lang-menu" class="js-disabled">
+                    <li> <!-- DARK MODE -->
                         <button id="theme-dark-btn" class="icons-scale js-disabled" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
-                        <!--//END DARK MODE -->
                     </li>
-                    <!-- LANG DROPDOWN MENU -->
-                    <noscript id="lang-fallback"> <!-- FALLBACK -->
-                        <li>
-                            <button data-lang="ca" aria-label="Català">
-                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#cat-flag"></use>
-                                </svg>
-                            </button>
-                        </li>
-                        <li>
-                            <button data-lang="es" aria-label="Español">
-                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#es-flag"></use>
-                                </svg>
-                            </button>
-                        </li>
-                        <li>
-                            <button data-lang="en" aria-label="English">
-                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#uk-flag"></use>
-                                </svg>
-                            </button>
-                        </li>
-                    </noscript>
-                    <div id="lang-menu" class="js-disabled"> <!-- JS ENABLED -->
-                        <li>
-                            <button class="icons-scale" id="lang-toggle" data-lang="ca" aria-label="Català">
-                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#cat-flag"></use>
-                                </svg>
-                            </button>
-                        </li>
-                        <li>
-                            <button class="icons-scale" data-lang="es" aria-label="Español">
-                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#es-flag"></use>
-                                </svg>
-                            </button>
-                        </li>
-                        <li>
-                            <button class="icons-scale" data-lang="en" aria-label="English">
-                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#uk-flag"></use>
-                                </svg>
-                            </button>
-                        </li>
-                    </div>
-                    <!--//LANG MENU END -->
+                    <!-- LANG MENU -->
+                    <li>
+                        <button class="icons-scale" id="lang-toggle" data-lang="ca" aria-label="Català">
+                            <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                                <use href="img/sprite.svg#cat-flag"></use>
+                            </svg>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="icons-scale" data-lang="es" aria-label="Español">
+                            <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                                <use href="img/sprite.svg#es-flag"></use>
+                            </svg>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="icons-scale" data-lang="en" aria-label="English">
+                            <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                                <use href="img/sprite.svg#uk-flag"></use>
+                            </svg>
+                        </button>
+                    </li>
                 </ul>
+                <!--//JS NAV END -->
             </nav>
         </header>
         <main>
