--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <noscript>
                     <ul>
                         <li> <!-- DARK MODE -->
-                            <a class="icons-scale" aria-label="Alternar Modo oscuro" href="fallbacks/index.es-dark.html">🌙</a>
+                            <a class="dark-mode-btn icons-scale" aria-label="Alternar Modo oscuro" href="fallbacks/index.es-dark.html">🌙</a>
                         </li>
                         <!-- LANG MENU -->
                         <li>
@@ -192,9 +192,9 @@
                 </noscript>
                 <!--// FALLBACK NAV END -->
                 <!-- JS NAV -->
-                <ul id="lang-menu" class="js-disabled">
+                <ul class="js-disabled">
                     <li> <!-- DARK MODE -->
-                        <button id="theme-dark-btn" class="icons-scale js-disabled" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
+                        <button id="theme-dark-btn" class="dark-mode-btn icons-scale" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
                     </li>
                     <!-- LANG MENU -->
                     <li>
