yandex site verification

--- a/index.html
+++ b/index.html
@@ -84,10 +84,8 @@
     <!-- SEARCH ENGINE VERIFICATION -->
     <meta name="google-site-verification" content="bSt6stKHamguB6eCCCbguxnzl5t-MGnSbyxzYzEmP5Q">
     <meta name="msvalidate.01" content="67F856661103182488C8ADE76EA02DF0">
-
-    <!-- IT DOESN'T WORK, YET...
-    <meta name="yandex-verification" content="0fffbcaf61220645">
-    ADD BAIDU, NAVER AND OTHERS -->
+    <meta name="yandex-verification" content="41d8a99d172f9fff">
+    <!-- ADD BAIDU, NAVER AND OTHERS -->
 
     <!-- SCHEMA LD+JSON -->
     <script type="application/ld+json">
